fixed minor bug where hitting the reply button would distort the position of dislike

--- a/src/app/components/post/post.component.css
+++ b/src/app/components/post/post.component.css
@@ -1,5 +1,4 @@
 #dislike{
-    position: absolute;
     left: 80px;
-    bottom: 72px;
+    bottom: 67px;
 }
